--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "lucide-react": "^0.542.0",
     "next": "15.5.0",
     "next-pwa": "^5.6.0",
     "react": "19.1.0",
